# etlab

./: .gitignore  README.md
etlab-cli/: pyproject.toml
etlab-cli/src/etlab_cli/: cli.py
etlab-cli/src/etlab_cli/pipelines/: parser.py  schema.py
